kubernetes/overlays/infrastructure/infra/applications/cert-manager/network-policies/allow-vm-agent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vm-agent
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: monitoring
    ports:
    - protocol: TCP
      port: 9402
